fix(themes) Standardize the padding/spacing for all themes (#2300)
* Standardize code block styling for all themes

  display: block;
  overflow-x: auto;
  padding: 0.5em;

- Update Atom One Dark (reasonable)
- Update Hopscotch
- Update Shades of Purple

--- a/src/styles/hopscotch.css
+++ b/src/styles/hopscotch.css
@@ -69,6 +69,7 @@
 
 .hljs {
   display: block;
+  overflow-x: auto;
   background: #322931;
   color: #b9b5b8;
   padding: 0.5em;
